<resources>
    <string name="app_name">"My App Portfolio"</string>
    <string name="action_settings">Settings</string>

    <string name="title_label">"My Nanodegree Apps!"</string>

    <string name="button1_label">"Spotify Streamer"</string>
    <string name="button2_label">"Scores App"</string>
    <string name="button3_label">"Library App"</string>
    <string name="button4_label">"Build It Bigger"</string>
    <string name="button5_label">"XYZ Reader"</string>
    <string name="button6_label">"Capstone: My Own App"</string>
    
    <string name="toast_part_begin_msg">"This button will launch my "</string>
    <string name="toast_part_end_msg">" app!"</string>
    
</resources>
